--- a/src/scss/pages/connect-social-networks.scss
+++ b/src/scss/pages/connect-social-networks.scss
@@ -1,11 +1,16 @@
+@import '../_partials/variables';
+
 body #root .App .views .view .page.connect-social-networks-page  {
   #page-content {
-    margin: 60px auto 0 auto;
+    margin: $navbar-hg auto 0 auto;
     width: 100%;
 
     .title, .excerpt {
-      margin: auto;
+      margin: 0 auto;
+      padding: 8px 0;
       width: 85%;
+    }
+    .social-box {
     }
   }
   &.connect-social-networks-on-sign-up-page {
