QS-1651: Diseño general & responsive
 - Hacer tool bar responsive: ocultar labels para pantallas estrechas
 - Restringir dimensiones de los full-width buttons,
   centrarlos horizontalmente

--- a/src/scss/_partials/_toolbar.scss
+++ b/src/scss/_partials/_toolbar.scss
@@ -53,4 +53,10 @@
   &::before {
     content: none;
   }
+
+  @media only screen and (max-width: 359px) {
+    .toolbar-link .text {
+      display: none;
+    }
+  }
 }
