--- a/src/scss/_partials/_full-width-button.scss
+++ b/src/scss/_partials/_full-width-button.scss
@@ -1,8 +1,12 @@
 .button.button-big.button-round {
-	height: 57px;
-	line-height: 57px;
+	height: 48px;
+	line-height: 48px;
     text-transform: uppercase;
     font-size: 1em;
     font-weight: bold;
     width: 100%;
+    max-width: 240px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
 }
