Registro: Traer home de develop, adaptarla, y otros fixes pequeños

--- a/src/js/components/ui/Input/Input.scss
+++ b/src/js/components/ui/Input/Input.scss
@@ -24,7 +24,7 @@
       font-size: 19px;
       height: 58px;
       width: 70%;
-      margin: 0 5px;
+      margin: 0 auto;
       max-width: 80%;
       text-align: center;
       text-overflow: ellipsis;
