--- a/src/scss/pages/register.scss
+++ b/src/scss/pages/register.scss
@@ -8,6 +8,7 @@ body #root .App .views .view {
     height: 100%;
     max-height: 1779px;
     min-height: 300px;
+    color: $white;
     .register-image {
       background-size: 200% 200%;
       height: 100%;
